Refactor MealPlan batch editing